--- a/vueBookApi/package.json
+++ b/vueBookApi/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "js-cookie": "^3.0.5",
+    "lucide-vue-next": "^0.507.0",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
+    "vue-cookies": "^1.8.6",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
